--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -7,13 +7,12 @@
   },
   "main": "server.ts",
   "scripts": {
-    "start": "node ./server.js",
-    "start:dev": "node ./www/server.js",
+    "start": "node ./www/server.js",
     "tsc": "npx tsc",
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "deploy": "eb list && eb use udagram-api-dev-ver-2 && eb deploy",
+    "deploy": "npm run build && chmod +x bin/deploy.sh && bin/deploy.sh && eb list && eb use udagram-api-dev && eb deploy",
     "build": "npm install . && npm run clean && tsc && cp -rf src/config www/config && cp -R .elasticbeanstalk www/.elasticbeanstalk && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
